tests/suite/manifests/clientsettings/invalid-route-csp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invalid-route
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "cafe.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /invalid
      headers:
      - name: host_name
        value: v2
    backendRefs:
    - name: coffee
      port: 80
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: ClientSettingsPolicy
metadata:
  name: invalid-route-csp
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: invalid-route
  keepAlive:
    requests: 200
