tests/suite/manifests/clientsettings/merging-csps.yaml
apiVersion: gateway.bessystem.com/v1alpha1
kind: ClientSettingsPolicy
metadata:
  name: hr-merge-1
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: coffee
  body:
    maxSize: 9m
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: ClientSettingsPolicy
metadata:
  name: hr-merge-2
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: coffee
  keepAlive:
    requests: 1000
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: ClientSettingsPolicy
metadata:
  name: hr-merge-3
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: coffee
  body:
    timeout: 30s
  keepAlive:
    time: 5s
    minTimeout: 10s
    timeout:
      server: 2s
      header: 1s
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: ClientSettingsPolicy
metadata:
  name: grpc-merge-1
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: GRPCRoute
    name: grpc-route
  keepAlive:
    requests: 800
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: ClientSettingsPolicy
metadata:
  name: grpc-merge-2
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: GRPCRoute
    name: grpc-route
  body:
    timeout: 50s
  keepAlive:
    time: 3s
    minTimeout: 10s
    timeout:
      server: 30s
      header: 60s
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: ClientSettingsPolicy
metadata:
  name: z-hr-conflict-1
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: coffee
  body:
    maxSize: 12m
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: ClientSettingsPolicy
metadata:
  name: z-hr-conflict-2
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: coffee
  keepAlive:
    timeout:
      server: 2s
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: ClientSettingsPolicy
metadata:
  name: z-hr-conflict-3
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: coffee
  keepAlive:
    minTimeout: 5s
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: ClientSettingsPolicy
metadata:
  name: z-grpc-conflict
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: GRPCRoute
    name: grpc-route
  keepAlive:
    time: 15s
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: ClientSettingsPolicy
metadata:
  name: z-grpc-conflict-2
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: GRPCRoute
    name: grpc-route
  keepAlive:
    minTimeout: 5s
