tests/suite/manifests/clientsettings/valid-csps.yaml
apiVersion: gateway.bessystem.com/v1alpha1
kind: ClientSettingsPolicy
metadata:
  name: tea-route-csp
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: tea
  keepAlive:
    requests: 200
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: ClientSettingsPolicy
metadata:
  name: soda-route-csp
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: soda
  body:
    maxSize: "3000"
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: ClientSettingsPolicy
metadata:
  name: coffee-route-csp
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: coffee
  body:
    maxSize: "2000"
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: ClientSettingsPolicy
metadata:
  name: gw-csp
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  body:
    maxSize: "1000"
    timeout: 30s
  keepAlive:
    requests: 100
    time: 5s
    minTimeout: 3s
    timeout:
      server: 2s
      header: 1s
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: ClientSettingsPolicy
metadata:
  name: grpc-route-csp
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: GRPCRoute
    name: grpc-route
  body:
    maxSize: "0"
